Fix spelling and spacing in css code

--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@ html {
 }
 
 .card-body {
-  padding-left: .2rem 1rem;
+  padding: .2rem 1rem;
 }
 
 .card-title {
@@ -34,7 +34,7 @@ html {
 .card-label {
   padding: .3rem 1rem .3rem calc(1rem - 4px);
   border-left: 4px solid green;
-  background-color: rgba (255, 255, 255, .6);
+  background-color: rgba(255, 255, 255, .6);
   position: absolute;
   left: 0;
   top: 0;
